--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ site.title=Tusk Mutual Web Bank
 site.footer=@Copyright 2008-2014
 
 index.title=Home
-index.message=This is an example showing how to use Spring MVC annotations to make a CRUD webapp.  Tiles, Hibernate, and internationalized messages are also used.
+index.message=This is an example application designed to demonstrate Java application vulnerabilities. It is based on a Spring by Example template, showing how to use Spring MVC annotations to make a CRUD webapp. Tiles, Hibernate, and internationalized messages are also used.
 
 login.title=Login Required
 login.username=Username
